--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,18 @@
 html, body {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    width: 100vw;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+}
+
+#chart {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
