--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,8 +10,11 @@ body {
     height: 100%;
 }
 
-#chart {
+.chart-container {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
