added first services on graph + optimalization

--- a/projects/ngx-candlecharts/src/lib/components/chart/ngx-candlechart.component.html
+++ b/projects/ngx-candlecharts/src/lib/components/chart/ngx-candlechart.component.html
@@ -1,3 +1,4 @@
 <div class="ngx-chart__container">
   <canvas #ngxCanvas id="chart"></canvas>
+  <ngx-candlechart-tooltip></ngx-candlechart-tooltip>
 </div>
