--- a/projects/ngx-candlecharts/src/lib/components/chart/ngx-candlechart.component.html
+++ b/projects/ngx-candlecharts/src/lib/components/chart/ngx-candlechart.component.html
@@ -1,4 +1,5 @@
 <div class="ngx-chart__container">
   <canvas #ngxCanvas id="chart"></canvas>
+  <ngx-candlechart-menu-container></ngx-candlechart-menu-container>
   <ngx-candlechart-tooltip [canvas]="ngxCanvas"></ngx-candlechart-tooltip>
 </div>
