added menu interface styles

--- a/projects/ngx-candlecharts/src/lib/components/interface/menu/menu-container/ngx-candlechart-menu-container.component.scss
+++ b/projects/ngx-candlecharts/src/lib/components/interface/menu/menu-container/ngx-candlechart-menu-container.component.scss
@@ -1,5 +1,8 @@
 :host {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 1rem;
+  left: 1rem;
+  background: #3c4252;
+  border: 1px solid #41495a;
+  border-radius: .25rem;
 }
