candle hover + button

--- a/projects/ngx-candlecharts/src/lib/components/chart/ngx-candlechart.component.html
+++ b/projects/ngx-candlecharts/src/lib/components/chart/ngx-candlechart.component.html
@@ -1,4 +1,5 @@
 <div class="ngx-chart__container">
+  <canvas #ngxLineCanvas id="chart-line" class="ngx-chart__chart-line"></canvas>
   <canvas #ngxCanvas id="chart"></canvas>
   <ngx-candlechart-menu-container></ngx-candlechart-menu-container>
   <ngx-candlechart-tooltip [canvas]="ngxCanvas"></ngx-candlechart-tooltip>
