--- a/projects/ngx-candlecharts/src/lib/components/interface/menu/menu-container/ngx-candlechart-menu-container.component.html
+++ b/projects/ngx-candlecharts/src/lib/components/interface/menu/menu-container/ngx-candlechart-menu-container.component.html
@@ -1,1 +1,3 @@
-hejo
+<div class="ngx-candlechart__button-container">
+  <ngx-candlechart-menu-button (click)="buttonClicked()"></ngx-candlechart-menu-button>
+</div>
