--- a/projects/ngx-candlecharts/src/lib/components/chart/ngx-candlechart.component.scss
+++ b/projects/ngx-candlecharts/src/lib/components/chart/ngx-candlechart.component.scss
@@ -4,4 +4,11 @@
     width: 100%;
     height: 25rem;
   }
+
+  &__chart-line {
+    position: absolute;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+  }
 }
